2007-10-29  Light Of My Life  <tjenness@cpan.org>

	* Temp.pm: Fix range of random character determination such that the last character
	in the list (_) will appear occassionally. (Thanks to Peter Dintelmann)

2007-01-21 Tim Jenness <tjenness@cpan.org>

	--- RELEASE 0.18 CPAN ---
	
	* Temp.pm: Provide "cmp" overloading so File::Temp object can
	be compared to filename directly. (Rafael Garcia-Suarez)
	
	* Temp.pm: Remove umask control (was not thread-safe)
	(thanks to Peter Dintelmann, Gisle Aas)

	* t/cmp.t: New test file
	
2006-08-18  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE 0.17 CPAN ----
	
	* Temp.pm: Also inherit from IO::Seekable so that seek and tell
	methods can work on filehandles (thanks to Rick Myers and Toby Corkindale).

	* t/seekable.t: Add test script from Rick Myers.
	
	* Temp.pm: Add note about forking and resetting the random number generator
	to prevent multiple clashes of temp file names. (pointed out by Brent Cowgill)

	* Temp.pm: pre-emptively load Carp::Heavy. If we don't when we run out of file
	handles and attempt to call croak() we get an error message telling
	us that Carp::Heavy won't load rather than an error telling us we
	have run out of file handles. (pointed out by bjoern_at_hoehrmann.de RT #14151)

	* Temp.pm: Remove eg. from comments and replace with e.g. In pod
	replace "e.g." with "for example". (David Landgren)

	* Temp.pm: Correct synopsis concerning the arguments to the
	File::Temp constructor (Peter Valdemar Moerch).

	* Temp.pm: Update documentation to note that croak() will be
	called by tempfile() and File::Temp->new if a problem occurs (thanks to Steve
	Hay for pointing this out).

2005-09-01  Tim Jenness  <tjenness@cpan.org>

	* Temp.pm: Sebastien Aperghis-Tramoni indicates that File::Temp
	works with perl 5.004 so change the minimum perl version. (RT #14149)

	* Temp.pm: Use effective uid rather than real uid (Alexey Tourbin RT #14218)

2005-02-22  Tim Jenness  <tjenness@cpan.org>

	--- RELEASE V0.16 ---
	