@@ -3,6 +3,9 @@
 	* Temp.pm: Fix range of random character determination such that the last character
 	in the list (_) will appear occassionally. (Thanks to Peter Dintelmann)
 
+	* Temp.pm: Clarify error message when parent directory does not exist (thanks to
+	Peter Dintelmann)
+	
 2007-01-21 Tim Jenness <tjenness@cpan.org>
 
 	--- RELEASE 0.18 CPAN ---
